# finance_data_harvester

./: .gitignore  .licensesnip  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  telemetry.rs
systemd/: finance_harvester.service  finance_harvester.timer
